# cvc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  release.sh
.github/workflows/: release.yml
miracl_extracted/: __.SYMDEF
src/: add_secret_keys.c  crypto.c  crypto.h  ecp_operations.c  hash_to_field.c  nist256_key_material.c
tests/: test.sh  test_add_secret_keys.c  test_cvc.c  test_ecp_operations.c  test_hash_to_field.c
